fix broken bootstrap and datatables install

--- a/lib/cellar_web/templates/page/company.html.eex
+++ b/lib/cellar_web/templates/page/company.html.eex
@@ -1,5 +1,5 @@
 <script>
-$(document).ready(function () {
+document.addEventListener("DOMContentLoaded", function(event) {
   $('#cellarTable').DataTable({paging: false});
 });
 </script>
