--- a/lib/cellar_web/templates/page/index.html.eex
+++ b/lib/cellar_web/templates/page/index.html.eex
@@ -1,5 +1,5 @@
 <script>
-$(document).ready(function () {
+document.addEventListener("DOMContentLoaded", function(event) {
   $('#cellarTable').DataTable({paging: false});
 });
 </script>
@@ -8,7 +8,7 @@ $(document).ready(function () {
   <h1>Welcome to the Cellar</h1>
 </section>
 
-<table id="cellarTable">
+<table id="cellarTable" class="table table-striped table-bordered hover">
   <thead>
     <tr>
       <th>Company</th>
