--- a/lib/cellar_web/templates/layout/app.html.eex
+++ b/lib/cellar_web/templates/layout/app.html.eex
@@ -28,7 +28,7 @@
     <main role="main" class="container">
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
-      <%= render @view_module, @view_template, assigns %>
+      <%= @inner_content %>
     </main>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
