--- a/lib/cellar_web/templates/page/company.html.eex
+++ b/lib/cellar_web/templates/page/company.html.eex
@@ -8,7 +8,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
   <h1>Welcome to the Cellar</h1>
 </section>
 
-<table id="cellarTable">
+<table id="cellarTable" class="table table-striped table-bordered hover">
   <thead>
     <tr>
       <th>Company</th>
