--- a/lib/cellar_web/templates/page/index.html.heex
+++ b/lib/cellar_web/templates/page/index.html.heex
@@ -5,7 +5,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 </script>
 
 <section class="phx-hero">
-  <h1>Welcome to <%= Helpers.cellar_name() %></h1>
+  <h1>Welcome to <%= cellar_name() %></h1>
 </section>
 
 <table id="cellarTable" class="table table-striped table-bordered hover">
